--- a/vignettes/tidy_sop.Rmd
+++ b/vignettes/tidy_sop.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Arrumar Dados Programáticos do SISMA"
+title: "Arrumar Dados SISMA"
 output:
   rmarkdown::html_vignette:
     toc: true
