--- a/vignettes/tidy-disa.Rmd
+++ b/vignettes/tidy-disa.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Arrumar Dados de Carga Viral da DISA"
+title: "Arrumar Dados DISA"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{tidy-disa}
